--- a/.github/workflows/update-docker.yaml
+++ b/.github/workflows/update-docker.yaml
@@ -3,18 +3,17 @@ name: Build and push Docker images
 on:
   push:
     branches:
-      - "main"
-  workflow_dispatch:
-  schedule:
-    - cron: "0 7 * * *"
+      - 'main'
 
-# env:
-#   TZ: Asia/Shanghai
 
 jobs:
   docker:
     runs-on: ubuntu-latest
-    steps:
+    permissions:
+      packages: write
+      contents: read
+
+    steps: 
       - name: Checkout
         uses: actions/checkout@v2
 
