--- a/.github/workflows/update-docker.yaml
+++ b/.github/workflows/update-docker.yaml
@@ -43,47 +43,47 @@ jobs:
       - name: Install Dependencies
         run: composer install
 
-      - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v3
-        with:
-          # list of Docker images to use as base name for tags
-          images: |
-            gindex/lsky
-          #  gindex/jdtool:latest
-          #  ghcr.io/gindex/jdtool
-          # flavor: |
-          #   latest=${{ github.ref == 'refs/heads/main' }}
+      # - name: Docker meta
+      #   id: meta
+      #   uses: docker/metadata-action@v3
+      #   with:
+      #     # list of Docker images to use as base name for tags
+      #     images: |
+      #       gindex/lsky
+      #     #  gindex/jdtool:latest
+      #     #  ghcr.io/gindex/jdtool
+      #     # flavor: |
+      #     #   latest=${{ github.ref == 'refs/heads/main' }}
 
-          # generate Docker tags based on the following events/attributes
-          tags: |
-            type=schedule
-            type=ref,event=branch
-            type=ref,event=pr
-            type=ref,event=tag
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=raw,enable=${{ github.ref == 'refs/heads/main' }},value=latest
+      #     # generate Docker tags based on the following events/attributes
+      #     tags: |
+      #       type=schedule
+      #       type=ref,event=branch
+      #       type=ref,event=pr
+      #       type=ref,event=tag
+      #       type=semver,pattern={{version}}
+      #       type=semver,pattern={{major}}.{{minor}}
+      #       type=semver,pattern={{major}}
+      #       type=raw,enable=${{ github.ref == 'refs/heads/main' }},value=latest
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Login to DockerHub
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKERHUB_USERNAME }}
+      #     password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/s390x
-          push: true
-          context: .
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      # - name: Build and push
+      #   id: docker_build
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/s390x
+      #     push: true
+      #     context: .
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
